manifests/docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: trisa
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
      - name: docs
        image: trisa/testnet-docs:develop
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  namespace: trisa
spec:
  ports:
  - port: 80
    targetPort: http
    name: http
  selector:
    app: docs
