manifests/trisads.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: trisads
  namespace: trisa
  labels:
    app: trisads
spec:
  serviceName: trisads
  replicas: 1
  selector:
    matchLabels:
      app: trisads
  template:
    metadata:
      labels:
        app: trisads
    spec:
      containers:
      - name: trisads
        image: trisa/gds:1.0-rc.5
        ports:
        - containerPort: 443
          protocol: TCP
          name: grpc
        volumeMounts:
        - name: dsdata
          mountPath: /data
        - name: dscerts
          mountPath: /certs
        - name: dsgcpsa
          mountPath: /creds
          readOnly: true
        resources: {}
      volumes:
      - name: dsgcpsa
        secret:
          secretName: gcp-trisads-sa
          items:
          - key: serviceAccount
            path: gcp-trisads-sa.json
  volumeClaimTemplates:
  - metadata:
      name: dsdata
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 4Gi
  # TODO: change to emptyDir
  - metadata:
      name: dscerts
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: trisads-service
  namespace: trisa
spec:
  type: ClusterIP
  ports:
  - name: grpc
    port: 443
    protocol: TCP
    targetPort: grpc
  selector:
    app: trisads
